# secondbest

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: board.rs  error.rs  game.rs  lib.rs
src/board/: bitboard.rs  board.rs  legal_actions.rs  types.rs
